--- a/about.html
+++ b/about.html
@@ -56,15 +56,21 @@
     
     nav a:link {
 
-    color: #3D6E3D; 
+        color: #3D6E3D; 
 
     }
 
     nav a:active {
 
-    color: #EDAFCE; 
+        color: #EDAFCE; 
 
     }
+
+   nav a:visited {
+       
+       color: #A6D4B8
+
+   }
 
     article {
 
